Cleanup from spinclad++.
git-svn-id: http://svn.pugscode.org/pugs@23412 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -305,7 +305,7 @@ their ASCII digraphs C<<< >> >>> and C<<< << >>> are used to denote
 arrays) and return a list (or array) of the results.  Spaces are not
 allowed on the "pointy" end of each "hyper", but are allowed on the
 blunt end (except for postfix operators, which must still follow postfix
-spacing rules, but do for allow an additional dot before the "hyper").
+spacing rules, but do allow for an additional dot before the "hyper").
 
 For example:
 
