--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -12,9 +12,9 @@ Luke Palmer <luke@luqui.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 8 Mar 2004
-  Last Modified: 11 May 2006
+  Last Modified: 12 May 2006
   Number: 3
-  Version: 29
+  Version: 30
 
 =head1 Changes to existing operators
 
@@ -32,13 +32,14 @@ Huffman-code the language, while others have changed precedence.
 an alternate form that does.  (The converse does not hold--just because
 you can write C<x().foo> doesn't mean you can write C<x()foo>.)
 
-=item * Unary C<~> now imposes a string (C<Str>) context on its argument, and
-C<+> imposes a numeric (C<Num>) context (as opposed to being a no-op in Perl
-5).  Along the same lines, C<?> imposes a boolean (C<Bool>) context, and C<*>
-imposes an function-arguments (C<Capture>) context.   Unary sigils impose the
-container context implied by their sigil.  As with Perl 5, however,
-C<$$foo[bar]> parses as C<$($foo)[bar]>, so you need C<$($foo[bar])> to mean
-the other way.
+=item * Unary C<~> now imposes a string (C<Str>) context on its
+argument, and C<+> imposes a numeric (C<Num>) context (as opposed
+to being a no-op in Perl 5).  Along the same lines, C<?> imposes
+a boolean (C<Bool>) context, and the C<[,]> list operator imposes
+an function-arguments (C<Capture>) context on its argumetns.
+Unary sigils impose the container context implied by their sigil.
+As with Perl 5, however, C<$$foo[bar]> parses as C<$($foo)[bar]>,
+so you need C<$($foo[bar])> to mean the other way.
 
 =item * Bitwise operators get a data type prefix: C<+>, C<~>, or C<?>.
 For example, C<|> becomes either C<+|> or C<~|> or C<?|>, depending on
@@ -247,13 +248,13 @@ numbers are C<not> truncated before comparison to integer ranges:
     1.5 ~~ 1^..^2  # true, equivalent to 1 < 1.5 < 2
     2.1 ~~ 1..2    # false, equivalent to 1 <= 2.1 <= 2
 
-If an argumentless C<*> (see the "Whatever" operator below) occurs on
+If a C<*> (see the "Whatever" type in S02) occurs on
 the right side of a range, it is taken to mean "positive infinity"
 in whatever space the range is operating.  A C<*> on the left means
 "negative infinity" for types that support negative values.  If the
 C<*> occurs on one side but not the other, the type is inferred from
 the other argument.  A star on both sides will match any value that
-supports the Ordered role.
+supports the C<Ordered> role.
 
     0..*	# 0 .. +Inf
     'a'..*	# 'a' .. 'zzzzzzzzzzzzzzzzzzzzzzzzzzzzz...
@@ -429,8 +430,16 @@ to return something more meaningful.  All the comparison operators
 return a boolean for either 1 or 0 arguments.  Negated operators
 return C<Bool::False>, and all the rest return C<Bool::True>.
 
-This metaoperator can also be used on the semicolon second-dimension
-separator:
+You can also make a reduce operator of the comma operator.  This has
+the effect of dereferencing its arguments into another argument list
+as if they'd been placed there directly.
+
+    @args = \@foo,1,2,3;
+    push [,] @args;	# same as push @foo,1,2,3
+
+See S06 for more.
+
+You may also reduce using the semicolon second-dimension separator:
 
     [[;] 1,2,3]   # equivalent to [1;2;3]
 
@@ -512,14 +521,30 @@ On the plus side, this works without a star:
     @args = (\%a,'foo','bar');
     $x = [dehash] @args;
 
-In scalar context, a reduce operator returns only the final result, but
-in list context, the reduce operator also returns all intermediate results
-lazily:
+A reduce operator returns only a scalar result regardless of context.
+(Even C<[,]> returns a single Capture object which is then spliced
+into the outer argument list.)  To return all intermediate results,
+backslash the operator:
 
-    say [+], 1..*  #  (1, 3, 6, 10, 15, ...)
+    say [\+] 1..*  #  (1, 3, 6, 10, 15, ...)
 
-Unlike other reduction operators, the C<[;]> operator is not sensitive
-to list context.
+The visual picture of a triangle is not accidental.  To produce a triangular
+list of lists, you can use a "triangular comma":
+
+    [\,] 1..5
+    [1],
+    [1,2],
+    [1,2,3],
+    [1,2,3,4],
+    [1,2,3,4,5]
+
+If there is ambiguity between a triangular reduce and an infix operator
+beginning with backslash, the infix operator is chosen, and an extra backslash
+indicates the corresponding triangular reduce.  As a consequence, defining an
+infix operator beginning with backslash, C<< infix:<\x> >> say, will make it
+impossible to write certain triangular reduction operators, since C<[\x]> would
+mean the normal reduction of C<< infix:<\x> >> operator, not the triangular
+reduction of C<< infix:<x> >>.  This is deemed to be an insignificant problem.
 
 =head1 Junctive operators
 
@@ -672,19 +697,21 @@ These all have their uses and are explained in subsequent Synopses.
 
 =head1 Argument List Interpolating
 
-Since typeglobs are being removed, unary C<*> may now serve as an
-interpolator, by casting its single operand to a C<Capture> object
-and inserting it into the current argument list.
+Perl 5 forced interpolation of a functions argument list by use of
+the C<&> prefix.  That option is no longer available in Perl 6, so
+instead the C<[,]> reduction operator serves as an
+interpolator, by casting its operands to C<Capture> objects
+and inserting them into the current argument list.
 
 It can be used to interpolate an C<Array> or C<Hash> into the current
 call, as positional and named arguments respectively.
 
 Note that those arguments still must comply with the subroutine's
-signature, but the presence of C<*> defers that test until run time for
+signature, but the presence of C<[,]> defers that test until run time for
 that argument (and for any subsequent arguments):
 
     my @args = (scalar @foo, @bar);
-    push *@args;
+    push [,] @args;
 
 is equivalent to:
 
@@ -693,7 +720,7 @@ is equivalent to:
 as is this:
 
     my $args = \(@foo, @bar);    # construct a Capture object
-    push *$args;
+    push [,] @$args;
 
 In list context, a Scalar holding an Array object does not flatten.  Hence
 
@@ -701,18 +728,15 @@ In list context, a Scalar holding an Array object does not flatten.  Hence
     push @foo, $bar;
 
 merely pushes a single C<Array> object onto C<@foo>.  You can
-explicitly flatten it in any of these ways:
+explicitly flatten it in either of these ways:
 
-    push @foo, *$bar;
     push @foo, @$bar;
     push @foo, $bar[];
 
-The first form works by interpolating C<$bar>'s elements into positional
-arguments to C<push>.  The last two forms works because the slurpy
-array in C<push>'s signature flattens the C<Array> object in positional
-argument.
+Those two forms work because the slurpy array in C<push>'s signature
+flattens the C<Array> object into a list argument.
 
-Note that the last two forms also allow you to specify list context on
+Note that those two forms also allow you to specify list context on
 assignment:
 
     @$bar = (1,2,3);
@@ -721,7 +745,7 @@ assignment:
 The last is particularly useful at the end of a long name naming an
 array attribute:
 
-    $foo.bar.baz.bletch.whatever.attr[] = (1,2,3)
+    $foo.bar.baz.bletch.whatever.attr[] = 1,2,3;
 
 The empty C<[]> and C<.[]> postfix operators are interpreted as
 zero-dimensional slices returning the entire array, not null slices
@@ -729,70 +753,16 @@ returning no elements.  Likewise for C<{}> and C<.{}> on hashes,
 not to mention the C<< <> >>, C<< .<> >>, C<«»>, and C<.«»>
 constant and interpolating slice subscripting forms.
 
-The C<*> operator interpolates lazily for C<Array> and C<Range> objects.
-To get an immediate interpolation like Perl 5 does, use unary C<**> instead:
+The C<[,]> operator interpolates lazily for C<Array> and C<Range> objects.
+To get an immediate interpolation like Perl 5 does, add the C<eager> list
+operator:
 
-    func(*(1..Inf));    # works fine
-    func(**(1..Inf));   # never terminates
+    func([,] 1..Inf);         # works fine
+    func([,] eager 1..Inf);   # never terminates
 
-You may use either of them on a scalar iterator to force it to iterate.
+To interpolate a function's return value, you must say:
 
-The C<*> operator is recognized only if the next character is a sigil
-or an opening bracket, In front of an alphabetic character C<*> will
-always be taken to mean C<GLOBAL::>.  Otherwise it will be assumed
-the C<*> has no argument.  See next section.
-
-To interpolate a function's return value, therefore, you must say one
-of these:
-
-    push *(func())
-    push *[func()]
-    push *&func()
-
-because
-
-    push *func()
-
-means
-
-    push GLOBAL::func()
-
-=item * The "Whatever" operator
-
-If the C<*> prefix operator has I<no> argument, it captures the notion
-of "Whatever", which is applied lazily by whatever operator it is
-an argument to.  Generally it can just be thought of as a "glob"
-that gives you everything it can in that argument position.  For instance:
-
-    if $x ~~ 1..* {...}			# if 1 <= $x <= +Inf
-    my ($a,$b,$c) = "foo" xx *;		# an arbitrary long list of "foo"
-    if /foo/ ff * {...}			# a latching flipflop
-    @slice = @x[*;0;*];			# any Int
-    @slice = %x{*;'foo'};		# any keys in domain of 1st dimension
-    @array[*]				# flattens, unlike @array[]
-    (*, *, $x) = (1, 2, 3);		# skip first two elements
-					# (same as lvalue "undef" in Perl 5)
-
-C<Whatever> is an undefined prototype object derived from C<Any>.  As a
-type it is abstract, and may not be instantiated as a defined object.
-If for a particular MMD dispatch, nothing in the MMD system claims it,
-it dispatches to as an C<Any> with an undefined value, and usually
-blows up constructively.  If you say
-
-    say 1 + *;
-
-you should probably not expect it to yield a reasonable answer, unless
-you think an exception is reasonable.  Since the C<Whatever> object
-is effectively immutable, the optimizer is free to recognize bare C<*>
-and optimize in the context of what operator it is being passed to.
-
-Other uses for C<*> will doubtless suggest themselves over time.  These
-can be given meaning via the MMD system, if not the compiler.  In general
-a C<Whatever> should be interpreted as maximizing the degrees of freedom
-in a dwimmey way, not as a nihilistic "don't care anymore--just shoot me".
-Care must also be taken not to introduce it on the left side of an infix
-that would be misconstrued as a term or prefix.  C<*..*> works only because
-no term starts with "C<..>".
+    push [,] func()
 
 =head1 Piping operators
 
