--- a/doc/trunk/design/syn/S06.pod
+++ b/doc/trunk/design/syn/S06.pod
@@ -13,9 +13,9 @@ Allison Randal <al@shadowed.net>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 21 Mar 2003
-  Last Modified: 3 May 2006
+  Last Modified: 12 May 2006
   Number: 6
-  Version: 33
+  Version: 34
 
 
 This document summarizes Apocalypse 6, which covers subroutines and the
@@ -345,29 +345,41 @@ arglist variable.)
 
 =head2 Named arguments
 
-Named arguments are recognized syntactically at the
-"comma" level.  Pairs intended as positional arguments rather than
-named arguments must be isolated by extra parens:
+Named arguments are recognized syntactically at the "comma" level.
+Since parameters are identified using identifiers, the recognized
+syntaxes are those where the identifier in question is obvious.
+You may use either the adverbial form, C<:name($value)>, or the
+autoquoted arrow form, C<< name => $value >>.  These must occur at
+the top "comma" level, and no other forms are taken as named pairs
+by default.  Pairs intended as positional arguments rather than named
+arguments may be indicated by extra parens or by explicitly quoting
+the key to suppress autoquoting:
 
     doit :when<now>,1,2,3;	# always a named arg
     doit (:when<now>),1,2,3;	# always a positional arg
 
     doit when => 'now',1,2,3;	# always a named arg
     doit (when => 'now'),1,2,3;	# always a positional arg
+    doit 'when' => 'now',1,2,3;	# always a positional arg
 
 Going the other way, pairs intended as named arguments that don't look
-like pairs must be introduced with C<*>:
+like pairs must be introduced with the C<[,]> reduction operator:
 
     $pair = :when<now>;
-    doit $pair,1,2,3;	# always a positional arg
-    doit *$pair,1,2,3;	# always a named arg
+    doit $pair,1,2,3;                   # always a positional arg
+    doit [,] $pair,1,2,3;               # always a named arg
+    doit [,]('when' => 'now'),1,2,3;    # always a named arg
+    doit [,] get_pair(),1,2,3;          # always a named arg
+
+Note that, to apply C<[,]> to a single arg you may need to use parentheses.
+In general it doesn't matter.
 
 Likewise, if you wish to pass a hash and have its entries treated as
-named arguments, you must introduce it with a C<*>:
+named arguments, you must dereference it with a C<[,]>:
 
     %pairs = {:when<now> :what<any>};
-    doit %pairs,1,2,3;	# always a positional arg
-    doit *%pairs,1,2,3;	# always named args
+    doit %pairs,1,2,3;		# always a positional arg
+    doit [,](%pairs),1,2,3;	# always named args
 
 Variables with a C<:> prefix in rvalue context autogenerate pairs, so you
 can also say this:
@@ -414,13 +426,14 @@ objects.  Leftover named arguments can be slurped into a slurpy hash.
 
 Because named and positional arguments can be freely mixed, the
 programmer always needs to disambiguate pairs literals from named
-arguments with parenthesis:
+arguments with parenthesis or quotes:
 
     # Named argument "a"
     push @array, 1, 2, :a<b>;
 
     # Pair object (a=>'b')
     push @array, 1, 2, (:a<b>);
+    push @array, 1, 2, 'a' => 'b';
 
 Perl 6 allows multiple same-named arguments, and records the relative
 order of arguments with the same name.  When there are more than one
@@ -441,7 +454,7 @@ This means a hash holding default values must come I<before> known named
 parameters, similar to how hash constructors work:
 
     # Allow "x" and "y" in %defaults be overrided
-    f( *%defaults, x => 1, y => 2 );
+    f( [,](%defaults), x => 1, y => 2 );
 
 =head2 Invocant parameters
 
@@ -695,25 +708,26 @@ attempts at binding.
 
 =head2 Flattening argument lists
 
-The unary prefix operator C<*> casts a value to a C<Capture>
-object, then splices it into the argument list it occurs in.
+The reduce operator C<[,]> casts each of its arguments to a C<Capture>
+object, then splices each of those captures into the argument list
+it occurs in.
 
 Casting C<Capture> to C<Capture> is a no-op:
 
-    *(\(1, x=>2));    # Capture, becomes \(1, x=>2)
+    [,](\(1, x=>2));    # Capture, becomes \(1, x=>2)
 
 C<Pair> and C<Hash> become named arguments:
 
-    *(x=>1);          # Pair, becomes \(x=>1)
-    *{x=>1, y=>2};    # Hash, becomes \(x=>1, y=>2)
+    [,](x=>1);          # Pair, becomes \(x=>1)
+    [,]{x=>1, y=>2};    # Hash, becomes \(x=>1, y=>2)
 
 C<List> (also C<Seq>, C<Range>, etc.) are simply turned into
 positional arguments:
 
-    *(1,2,3);         # Seq, becomes \(1,2,3)
-    *(1..3);          # Range, becomes \(1,2,3)
-    *(1..2, 3);       # List, becomes \(1,2,3)
-    *([x=>1, x=>2]);  # List (from an Array), becomes \((x=>1), (x=>2))
+    [,](1,2,3);         # Seq, becomes \(1,2,3)
+    [,](1..3);          # Range, becomes \(1,2,3)
+    [,](1..2, 3);       # List, becomes \(1,2,3)
+    [,]([x=>1, x=>2]);  # List (from an Array), becomes \((x=>1), (x=>2))
 
 For example:
 
@@ -722,14 +736,14 @@ For example:
 
     foo(1,2,3);                  # okay:  three args found
     foo(@onetothree);            # error: only one arg
-    foo(*@onetothree);           # okay:  @onetothree flattened to three args
+    foo([,]@onetothree);         # okay:  @onetothree flattened to three args
 
-The C<*> operator flattens lazily -- the array is flattened only if
+The C<[,]> operator flattens lazily -- the array is flattened only if
 flattening is actually required within the subroutine. To flatten before
-the list is even passed into the subroutine, use the unary prefix C<**>
+the list is even passed into the subroutine, use the C<eager> list
 operator:
 
-    foo(**@onetothree);          # array flattened before &foo called
+    foo([,] eager @onetothree);          # array flattened before &foo called
 
 
 =head2 Multidimensional argument list binding
@@ -1779,7 +1793,7 @@ were the argument to a C<return> list operator (with whitespace):
 On the caller's end, the C<Capture> is interpolated into any new argument list
 much like an array would be, that is, as a scalar in scalar context, and as a
 list in list context.  This is the default behavior, but as with an array, the
-caller may use C<< prefix:<*> >> to inline the returned values as part of the
+caller may use C<< prefix:<[,]> >> to inline the returned values as part of the
 new argument list.  The caller may also bind the returned C<Capture> directly.
 
 =head2 The C<caller> function
