--- a/doc/trunk/design/syn/S06.pod
+++ b/doc/trunk/design/syn/S06.pod
@@ -362,14 +362,21 @@ the key to suppress autoquoting:
     doit (when => 'now'),1,2,3;	# always a positional arg
     doit 'when' => 'now',1,2,3;	# always a positional arg
 
+Only bare keys with valid identifier names are recognized as named arguments:
+
+    doit when => 'now';		# always a named arg
+    doit 'when' => 'now';	# always a positonal arg
+    doit 123  => 'now';		# always a positonal arg
+    doit :123<now>;		# always a positonal arg
+
 Going the other way, pairs intended as named arguments that don't look
 like pairs must be introduced with the C<[,]> reduction operator:
 
     $pair = :when<now>;
     doit $pair,1,2,3;                   # always a positional arg
-    doit [,] $pair,1,2,3;               # always a named arg
-    doit [,]('when' => 'now'),1,2,3;    # always a named arg
-    doit [,] get_pair(),1,2,3;          # always a named arg
+    doit [,] %$pair,1,2,3;              # always a named arg
+    doit [,] %(get_pair()),1,2,3;       # always a named arg
+    doit [,] %('when' => 'now'),1,2,3;  # always a named arg
 
 Note that, to apply C<[,]> to a single arg you may need to use parentheses.
 In general it doesn't matter.
