--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -1518,7 +1518,7 @@ A bare closure also interpolates in double-quotish context.  It may
 not be followed by any dereferencers, since you can always put them
 inside the closure.  The expression inside is evaluated in scalar
 (string) context.  You can force list context on the expression using
-either the C<list> operator if necessary.
+the C<list> operator if necessary.
 
 The following means the same as the previous example.
 
