Rerationalized loose operator precedence. New loose unary precedence level tighter than comma for "not" and "true". The two levels looser than listops are now "things that separate lists" and "things that separate logic" (with "and" arbitrarily placed in the former category along with zip and both pipe operators).
git-svn-id: http://svn.pugscode.org/pugs@23420 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -12,9 +12,9 @@ Luke Palmer <luke@luqui.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 8 Mar 2004
-  Last Modified: 12 May 2006
+  Last Modified: 15 May 2006
   Number: 3
-  Version: 31
+  Version: 32
 
 =head1 Changes to existing operators
 
@@ -923,10 +923,10 @@ Perl 6 has 22 precedence levels (which is fewer than Perl 5):
     tight or            || ^^ //
     ternary             ?? !!
     assignment          = := ::= += -= **= xx= .= etc. (and also =>)
-    list item separator , ¥
-    list op (rightward) <== print push any all true not etc. and ()= rightward
-    pipe forward        ==>
-    loose and           and
-    loose or            or xor err
+    loose unary         true not
+    list item separator ,
+    list op (rightward) print push any all etc. and ()= rightward
+    list infix          ¥ <== ==> and
+    logic infix         or xor err
     expr terminator     ; {} as control block, statement modifiers
 
