separated logicals back out, combined all comma-ish things in one level. but still 22 levels...
git-svn-id: http://svn.pugscode.org/pugs@23421 c213334d-75ef-0310-aa23-eaa082d1ae64

--- a/doc/trunk/design/syn/S03.pod
+++ b/doc/trunk/design/syn/S03.pod
@@ -924,9 +924,11 @@ Perl 6 has 22 precedence levels (which is fewer than Perl 5):
     ternary             ?? !!
     assignment          = := ::= += -= **= xx= .= etc. (and also =>)
     loose unary         true not
-    list item separator ,
-    list op (rightward) print push any all etc. and ()= rightward
-    list infix          ¥ <== ==> and
-    logic infix         or xor err
+    list ops            , print push any all etc. and ()= rightward
+    list infix          ¥ <== ==>
+    loose and           and
+    loose or            or xor err
     expr terminator     ; {} as control block, statement modifiers
 
+Comma is the only listop that is allowed to occur where an operator is
+expected.  All other listops function as a term within the list to the left.
