--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -12,9 +12,9 @@ Larry Wall <larry@wall.org>
 
   Maintainer: Larry Wall <larry@wall.org>
   Date: 10 Aug 2004
-  Last Modified: 15 May 2006
+  Last Modified: 23 May 2006
   Number: 2
-  Version: 42
+  Version: 43
 
 This document summarizes Apocalypse 2, which covers small-scale
 lexical items and typological issues.  (These Synopses also contain
@@ -1252,8 +1252,8 @@ or C<0d> as hex digits, not radix switchers.
 Characters indexed by hex, octal, and decimal can be interpolated
 into strings using either C<"\x123"> (with C<\o> and C<\d> behaving
 respectively) or using square brackets: C<"\x[123]">.  Multiple
-characters may be put into any of these by separating the numbers
-with comma: C<"\x[41,42,43]">.
+characters may be specified within any of the bracketed forms by
+separating the numbers with comma: C<"\x[41,42,43]">.
 
 =item *
 
